Fix about page spacing and overall layout issues

--- a/presto/resources/assets/sass/index.scss
+++ b/presto/resources/assets/sass/index.scss
@@ -94,8 +94,7 @@ html {
   height: 100%;
 }
 
-body {
-  height: 100%;
+#app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -123,6 +122,7 @@ footer {
 
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-width: 1px 0 0 0;
+  flex-shrink: 0;
 }
 
 .side-menu {
